--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -16,7 +16,7 @@
     dest: /etc/nginx/sites-available/libretime.conf
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
     backup: true
   notify: Restart nginx
 
