--- a/tasks/playout.yml
+++ b/tasks/playout.yml
@@ -6,7 +6,9 @@
 
 - name: Install playout python package # noqa no-handler
   ansible.builtin.pip:
-    name: "file://{{ libretime_checkout_dest }}/playout"
+    name: >
+      libretime-playout
+      @ file://{{ libretime_checkout_dest }}/playout
     state: latest # noqa package-latest
     virtualenv: "{{ libretime_venv | default(omit) }}"
   notify: Restart libretime
