--- a/tasks/playout.yml
+++ b/tasks/playout.yml
@@ -7,7 +7,7 @@
 - name: Install playout python package # noqa no-handler
   ansible.builtin.pip:
     name: >
-      libretime-playout
+      libretime-playout[{{ libretime_playout_pip_extras | join(',') }}]
       @ file://{{ libretime_checkout_dest }}/playout
     state: latest # noqa package-latest
     virtualenv: "{{ libretime_venv | default(omit) }}"
