feat: allow systemd service overrides

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,21 +27,26 @@ libretime_storage_dir: /srv/libretime
 ########################################################################################
 libretime_analyzer_managed: true
 libretime_analyzer_pip_extras: []
+libretime_analyzer_systemd_override:
 
 # > Playout
 ########################################################################################
 libretime_playout_managed: true
 libretime_playout_pip_extras: []
+libretime_playout_systemd_override:
+libretime_liquidsoap_systemd_override:
 
 # > Worker
 ########################################################################################
 libretime_worker_managed: true
 libretime_worker_pip_extras: []
+libretime_worker_systemd_override:
 
 # > API
 ########################################################################################
 libretime_api_managed: true
 libretime_api_pip_extras: []
+libretime_api_systemd_override:
 
 # > Legacy
 ########################################################################################
