--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 ## Ansible
 ansible-core>=2.14,<2.15
-ansible-lint>=6.0.0
+ansible-lint>=6.0.0,<7.0
 
 ## Dev
-black
-molecule
-molecule-podman
-pylint
-pytest
-pytest-testinfra
+black>=23.1.0,<24.0
+molecule>=4.0.0,<5.0
+molecule-podman>=2.0.3,<3.0
+pylint>=2.17.0,<3.0
+pytest>=7.2.2,<8.0
+pytest-testinfra==7.0.0,<8.0
