--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ ansible-lint>=6.0.0,<7.0
 ## Dev
 black>=23.1.0,<24.0
 molecule>=4.0.0,<5.0
-molecule-podman>=2.0.3,<3.0
+molecule-plugins[podman]>=23.0.0,<24.0
 pylint>=2.17.0,<3.0
 pytest>=7.2.2,<8.0
 pytest-testinfra==7.0.0,<8.0
