--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -103,18 +103,11 @@
     state: present
     name: [python3, python3-pip, python3-venv]
 
-- name: Upgrade python3 base packages
-  when: libretime_venv is not defined
+- name: Setup python3 environment
   ansible.builtin.pip:
     name: [pip, setuptools, wheel]
     state: latest # noqa package-latest
-
-- name: Create venv
-  when: libretime_venv is defined
-  ansible.builtin.pip:
-    name: [pip, setuptools, wheel]
-    state: latest # noqa package-latest
-    virtualenv: "{{ libretime_venv }}"
+    virtualenv: "{{ libretime_venv | default(omit) }}"
     virtualenv_command: python3 -m venv
 
 - name: Setup shared
