--- a/tasks/analyzer.yml
+++ b/tasks/analyzer.yml
@@ -10,9 +10,18 @@
       libretime-analyzer[{{ libretime_analyzer_pip_extras | join(',') }}]
       @ file://{{ libretime_checkout_dest }}/analyzer
     state: latest # noqa package-latest
-    virtualenv: "{{ libretime_venv | default(omit) }}"
+    virtualenv: "{{ libretime_venv_dir }}"
   notify: Restart libretime
   when: libretime_checkout is changed
+
+- name: Create analyzer entrypoint symlinks
+  ansible.builtin.file:
+    src: "{{ libretime_venv_dir }}/bin/libretime-analyzer"
+    dest: /usr/local/bin/libretime-analyzer
+    owner: root
+    group: root
+    state: link
+    force: true
 
 - name: Create analyzer home directory
   ansible.builtin.file:
