--- a/tasks/playout.yml
+++ b/tasks/playout.yml
@@ -10,9 +10,22 @@
       libretime-playout[{{ libretime_playout_pip_extras | join(',') }}]
       @ file://{{ libretime_checkout_dest }}/playout
     state: latest # noqa package-latest
-    virtualenv: "{{ libretime_venv | default(omit) }}"
+    virtualenv: "{{ libretime_venv_dir }}"
   notify: Restart libretime
   when: libretime_checkout is changed
+
+- name: Create playout entrypoint symlinks
+  ansible.builtin.file:
+    src: "{{ libretime_venv_dir }}/bin/{{ item }}"
+    dest: /usr/local/bin/{{ item }}
+    owner: root
+    group: root
+    state: link
+    force: true
+  with_items:
+    - libretime-liquidsoap
+    - libretime-playout
+    - libretime-playout-notify
 
 - name: Create playout home directory
   ansible.builtin.file:
