--- a/tasks/worker.yml
+++ b/tasks/worker.yml
@@ -5,7 +5,7 @@
       libretime-worker[{{ libretime_worker_pip_extras | join(',') }}]
       @ file://{{ libretime_checkout_dest }}/worker
     state: latest # noqa package-latest
-    virtualenv: "{{ libretime_venv | default(omit) }}"
+    virtualenv: "{{ libretime_venv_dir }}"
   notify: Restart libretime
   when: libretime_checkout is changed
 
