ci: update renovate config

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,20 +1,6 @@
 {
-  "extends": [
-    "config:base",
-    ":enablePreCommit",
-    ":preserveSemverRanges",
-    ":disableDependencyDashboard"
-  ],
-  "labels": ["dependencies"],
+  "extends": ["config:recommended", ":semanticCommits", ":enablePreCommit"],
   "packageRules": [
-    {
-      "matchManagers": ["github-actions"],
-      "addLabels": ["ci"]
-    },
-    {
-      "matchManagers": ["pip_setup", "pip_requirements"],
-      "addLabels": ["python"]
-    },
     {
       "matchUpdateTypes": ["patch"],
       "automerge": true
