--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
     hooks:
       - id: prettier
         files: \.(md|yml|yaml|json)$
-        exclude: ^.github/release-please-manifest.json$
+        exclude: ^(CHANGELOG.md|.github/release-please-manifest.json)$
 
   - repo: https://github.com/codespell-project/codespell
     rev: v2.2.6
