test: revert increase ansible verbosity
Reverts 349dc3ead2cb1434ebea767aa0fd294cd84e3cf0

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -20,7 +20,8 @@ provisioner:
   env:
     ANSIBLE_FORCE_COLOR: true
     ANSIBLE_PIPELINING: true
-    ANSIBLE_VERBOSITY: 1
+    # ANSIBLE_VERBOSITY: 1
+    # ANSIBLE_STDOUT_CALLBACK: community.general.yaml
   inventory:
     host_vars:
       instance1:
